add pseudo-classes, selectros

--- a/index.html
+++ b/index.html
@@ -29,7 +29,25 @@
         }
 
         h1 {
-            color: blue;
+            color: #09f;
+        }
+
+        .link {
+            color: red;
+        }
+
+        .link:hover {
+            outline: 3px solid red;
+        }
+
+        #show {
+            background: #09f;
+            color: white;
+            border: 0;
+        }
+
+        li:first-child {
+            color: #09f;
         }
 
         iframe {
@@ -44,9 +62,9 @@
         <h1>Portfolio Rezi</h1>
 
         <nav>
-            <a href="#experience">Experiencia</a>
-            <a href="#projects">Proyectos</a>
-            <a href="http://athena-s.net/" target="_blank" rel="noreferrer">Web</a>
+            <a class="link" href="#experience">Experiencia</a>
+            <a class="link" href="#projects">Proyectos</a>
+            <a class="link" href="http://athena-s.net/" target="_blank" rel="noreferrer">Web</a>
         </nav>
     </header>
 
@@ -64,6 +82,7 @@
 
         <ul>
             <li>SOY18 - 2021 hasta el presente</li>
+            <li>Otros</li>
         </ul>
 
         <a download href="images/avatar.webp">
